[gd_scene load_steps=9 format=2]

[ext_resource path="res://objects/Crate.gd" type="Script" id=1]
[ext_resource path="res://sprites/crates.sprites/crates0.tres" type="Texture" id=2]
[ext_resource path="res://sprites/crates.sprites/crates3.tres" type="Texture" id=3]
[ext_resource path="res://sprites/clock.png" type="Texture" id=4]
[ext_resource path="res://sprites/crates.sprites/crates4.tres" type="Texture" id=5]
[ext_resource path="res://sprites/crates.sprites/crates5.tres" type="Texture" id=6]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 8, 8 )

[sub_resource type="Animation" id=2]

resource_name = "got"
length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Crate:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Parachut:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Contents:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -100 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Contents:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[node name="Area2D" type="Area2D"]

input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision_layer = 32
collision_mask = 9
audio_bus_override = false
audio_bus_name = "Master"
script = ExtResource( 1 )
_sections_unfolded = [ "Collision" ]
contents = null
amount = -1

[node name="Contents" type="Node2D" parent="." index="0"]

_sections_unfolded = [ "Transform", "Visibility" ]

[node name="Health" type="Sprite" parent="Contents" index="0"]

texture = ExtResource( 2 )

[node name="Bullets" type="Sprite" parent="Contents" index="1"]

texture = ExtResource( 3 )

[node name="Clock" type="Sprite" parent="Contents" index="2"]

texture = ExtResource( 4 )

[node name="Crate" type="Sprite" parent="." index="1"]

texture = ExtResource( 5 )
_sections_unfolded = [ "Visibility" ]

[node name="Parachut" type="Sprite" parent="." index="2"]

position = Vector2( 0, -15 )
texture = ExtResource( 6 )
_sections_unfolded = [ "Visibility" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="3"]

shape = SubResource( 1 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="." index="4"]

rect = Rect2( -10, -10, 20, 20 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="." index="5"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/got = SubResource( 2 )
blend_times = [  ]

[connection signal="body_entered" from="." to="." method="_on_Area2D_body_entered"]

[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]


